fixed errors not showing up issue, added demo login

--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the api/session controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.modal{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.7);
+  z-index: 10;
+  // color: red;
+}
+
+.modal-content {
+  border: 1px solid lightgray;
+  border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
